# codex-tray-gauge

./: .gitignore  CMakeLists.txt  PRIVACY.md  README.md  build.bat  install-startup.ps1  uninstall-startup.ps1
.github/workflows/: build.yml  release.yml
src/: codex_client.cpp  codex_client.h  icon_renderer.cpp  icon_renderer.h  main.cpp  manifest.xml  quota_model.cpp  quota_model.h  resource.rc  tray_app.cpp  tray_app.h
